bdr.BDR2.scala.error
Erreur de compilation :
BDR2:1: error: not found: value x
x match {
^