bdr.BDR2.scala.code
x match {
  case "E" => avance()
}